<resources>
    <string name="app_name">Cafe Finder</string>
    <string name="base_url_cafenomad" translatable="false">https://cafenomad.tw/</string>
    <string name="base_url_locationiq" translatable="false">https://us1.locationiq.com/</string>

    <string name="url_facebook" translatable="false">https://www.facebook.com/ssj0936/</string>
    <string name="url_ig" translatable="false">https://www.instagram.com/ssj0936/</string>
    <string name="url_linkedin" translatable="false">https://www.linkedin.com/in/chia-hsuan-chung-0691ab161/</string>
    <string name="url_github" translatable="false">https://github.com/ssj0936</string>
    <string name="url_cafenomad_api" translatable="false">https://cafenomad.tw/developers/docs/v1.2</string>
    <string name="my_name_zhTW" translatable="false">鍾嘉軒</string>
    <string name="my_name" translatable="false">Timothy Chung</string>

    <string name="btn_text_navigate">Navigate</string>
    <string name="btn_text_cafenomad_url">Intro in Cafenomad</string>
    <string name="btn_text_official_url">URL</string>

    <string name="btn_permission_settings_pos_btn">Go to Permission setting</string>
    <string name="btn_permission_settings_neg_btn">Leave</string>
    <string name="no_data">No data</string>

    <string name="label_wifi_stability">Wifi Stability</string>
    <string name="label_seat_availability">Seat Availability</string>
    <string name="label_tasty_level">Tasty</string>
    <string name="label_quiet_level">Quiet</string>
    <string name="label_price_level">Price</string>
    <string name="label_good_music_level">Music Taste</string>
    <string name="label_is_socket_provide">Socket providing</string>
    <string name="label_is_standing_desk_available">Standing working desk</string>
    <string name="label_is_time_limited">Time limited</string>
    <string name="label_open_time">Open time</string>
    <string name="label_mrt">MRT station nearby</string>
    <string name="label_intro">Detail information</string>

    <string name="progress_bar_loading_text">Just a second, Cafe ninja is on the way!</string>


    <string name="dialog_network_require_message">Network is required for get Cafes information.</string>
    <string name="dialog_network_require_pos_btn">go to Wifi settings!</string>

    <string name="dialog_permission_require_message">We need your location to get cafes near by.</string>

    <string name="postfix_navigation_keyword" translatable="false">Cafe</string>

    <string name="info_value_yes" translatable="false">yes</string>
    <string name="info_value_maybe" translatable="false">maybe</string>
    <string name="info_value_no" translatable="false">no</string>

    <string name="info_time_limit_text_yes">has table time limit</string>
    <string name="info_time_limit_text_maybe">depends on the situation</string>
    <string name="info_time_limit_text_no">has no table time limit</string>

    <string name="info_socket_provided_text_yes">plenty of sockets are provided</string>
    <string name="info_socket_provided_text_maybe">depends on the seat</string>
    <string name="info_socket_provided_text_no">few sockets are provided</string>

    <string name="info_standing_desk_text_yes">some of</string>
    <string name="info_standing_desk_text_no">not provided</string>

    <!--preference kay-->
    <string name="preference_category_key_search" translatable="false">"search_category"</string>
    <string name="preference_category_title_search">"Search"</string>

    <string name="preference_key_search_range" translatable="false">"search_range"</string>
    <string name="preference_title_search_range">"Searching Range"</string>
    <string name="preference_summary_search_range">"setting range of searching"</string>

    <string name="preference_category_key_refetch_data" translatable="false">"refetch_data_category"</string>
    <string name="preference_category_title_refetch_data">"Refetch data"</string>

    <string name="preference_key_refetch_data" translatable="false">"refetch_data"</string>
    <string name="preference_title_refetch_data">"Refetch data"</string>

    <string name="preference_key_max_cafe_return_number" translatable="false">"max_cafe_return_number"</string>
    <string name="preference_title_max_cafe_return_number">"Max number of showing cafe near by"</string>


    <string name="cafe_not_found_text">No cafe nearby</string>
    <string name="cafe_not_found_subtext">Maybe you can walk around or set larger searching range</string>

    <string name="filter_text_all">All (Nearest first)</string>
    <string name="filter_text_favorite_only">Show favorite only</string>
    <!--    <string name="filter_text_distance_nearest">Distance (Nearest first)</string>-->
    <string name="filter_text_distance_farthest">Sort by distance (Farthest first)</string>
    <string name="filter_text_star">Sort by star rating</string>

    <string-array name="sort_item_display">
        <item>@string/filter_text_all</item>
        <item>@string/filter_text_favorite_only</item>
<!--        <item>@string/filter_text_distance_nearest</item>-->
<!--        <item>@string/filter_text_distance_farthest</item>-->
<!--        <item>@string/filter_text_star</item>-->
    </string-array>

    <string name="filter_label_all" translatable="false">FILTER_ALL</string>
    <string name="filter_label_favorite_only" translatable="false">FILTER_FAVORITE_ONLY</string>
<!--    <string name="filter_label_distance_nearest" translatable="false">FILTER_DISTANCE_NEAREST</string>-->
    <string name="filter_label_distance_farthest" translatable="false">FILTER_DISTANCE_FARTHEST</string>
    <string name="filter_label_star" translatable="false">FILTER_STAR</string>

    <string-array name="sort_item">
        <item>@string/filter_label_all</item>
        <item>@string/filter_label_favorite_only</item>
<!--        <item>@string/filter_label_distance_nearest</item>-->
<!--        <item>@string/filter_label_distance_farthest</item>-->
<!--        <item>@string/filter_label_star</item>-->
    </string-array>

    <string name="snackbar_refetch_done">Refetch Cafe data Finish.</string>
    <string name="snackbar_refetch_fail">Refetch Cafe data fail, please retry later.</string>

    <string name="button_text_search_this_area">Search this Area</string>

    <string name="filter_group_title_tasty_rate">Tasty rate</string>
    <string name="filter_group_title_environment_option">Environment option</string>
    <string name="filter_group_title_favorite">My favorite</string>

    <string name="filter_group_environment_option_is_time_limit">No Time Limit</string>
    <string name="filter_group_environment_option_has_socket">Socket provided</string>
    <string name="filter_group_environment_option_has_standing_desk">Standing desk provided</string>

    <string name="filter_tasty_button_0">no information</string>
    <string name="filter_tasty_button_1">1 star</string>
    <string name="filter_tasty_button_2">2 stars</string>
    <string name="filter_tasty_button_3">3 stars</string>
    <string name="filter_tasty_button_4">4 stars</string>
    <string name="filter_tasty_button_5">5 stars</string>

    <string name="filter_group_favorite">Show my favorite only</string>

    <string name="distance_unit_km" translatable="false">KM</string>
    <string name="distance_unit_m" translatable="false">M</string>

    <string name="about_this_app_text">About this App</string>

    <string name="about_btn_facebook_text" translatable="false">Facebook</string>
    <string name="about_btn_instagram_text" translatable="false">Instagram</string>
    <string name="about_btn_github_text" translatable="false">Github</string>
    <string name="about_btn_linkedin_text" translatable="false">Linkedin</string>
    <string name="about_btn_cafenomad_api_text" translatable="false">Cafenomad API</string>

    <string name="about_text_cafenomad_intro">Information of coffee shops is provided by:</string>
</resources>
