<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/preference_category_key_search"
        app:title="@string/preference_category_title_search"
        app:iconSpaceReserved="false">
        <SeekBarPreference
            android:key="@string/preference_key_search_range"
            android:id="@+id/preference_search_range_seek_bar"
            android:title="@string/preference_title_search_range"
            android:summary="@string/preference_summary_search_range"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/seekbar_preference_layout"
            app:min="@dimen/range_cafe_nearby_min"
            android:max="@dimen/range_cafe_nearby_max"
            app:defaultValue="@dimen/range_cafe_nearby_min"
            />
    </PreferenceCategory>

</PreferenceScreen>