<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:padding="0dp"
    app:contentPaddingBottom="8dp"
    app:contentPaddingTop="32dp"
    app:contentPaddingLeft="18dp"
    app:contentPaddingRight="18dp"
    app:cardBackgroundColor="@color/background_color"
    app:cardPreventCornerOverlap="false"
    android:clipToPadding="false"
    android:clipChildren="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:clipToPadding="false"
        android:clipChildren="false">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_group_title_tasty_rate"
            android:text="@string/filter_group_title_tasty_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/CafelistTitleStyle"/>

        <View
            android:id="@+id/divider_1"
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@id/filter_group_title_tasty_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/filter_group_title_tasty_rate"
            app:layout_constraintBottom_toBottomOf="@id/filter_group_title_tasty_rate"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_0"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_1"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_2"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_3"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_4"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tasty_rate_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tasty_button_5"
            style="@style/ButtonOutlinedStyle"
            tools:ignore="MissingConstraints"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/filter_group_tasty_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tasty_rate_0,tasty_rate_1,tasty_rate_2,tasty_rate_3,tasty_rate_4,tasty_rate_5"
            app:flow_horizontalGap="5dp"
            app:flow_verticalGap="0dp"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="chain"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_1"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_group_title_environment_option"
            android:text="@string/filter_group_title_environment_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/filter_group_tasty_rate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            style="@style/CafelistTitleStyle"/>

        <View
            android:id="@+id/divider_2"
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@id/filter_group_title_environment_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/filter_group_title_environment_option"
            app:layout_constraintBottom_toBottomOf="@id/filter_group_title_environment_option"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/environment_option_time_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_group_environment_option_is_time_limit"
            style="@style/ButtonOutlinedStyle"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/environment_option_socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_group_environment_option_has_socket"
            style="@style/ButtonOutlinedStyle"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/environment_option_standing_desk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_group_environment_option_has_standing_desk"
            style="@style/ButtonOutlinedStyle"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/filter_group_environment_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="environment_option_time_limit,environment_option_socket,environment_option_standing_desk"
            app:flow_horizontalGap="5dp"
            app:flow_verticalGap="0dp"
            app:flow_horizontalStyle="packed"

            app:flow_wrapMode="chain"

            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_group_title_favorite"
            style="@style/CafelistTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/filter_group_title_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_group_environment_option" />

        <View
            android:id="@+id/divider_4"
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@id/filter_group_title_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/filter_group_title_favorite"
            app:layout_constraintBottom_toBottomOf="@id/filter_group_title_favorite"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite_show_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_group_favorite"
            style="@style/ButtonOutlinedStyle"
            android:textAllCaps="false"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_4"/>

        <View
            android:id="@+id/divider_3"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_marginStart="-18dp"
            android:layout_marginEnd="-18dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorite_show_favorite"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            app:backgroundTint="@color/color_3"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/divider_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
